[package]
name = "hearthly-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
base64 = "0.21.4"
dotenvy = "0.15.7"
handlebars = "4.5.0"
log = "0.4.20"
env_logger = "0.10.0"
thiserror = "1.0.48"
hound = "3.5.0"
reqwest = { version = "0.11.20", features = ["json", "multipart"] }
tokio = { version = "1.32.0", features = ["full"] }